# Inventory-App

./: Inventory Alghortihm.ipynb  README.md  mango_stocks_app.py  preparing+for+algorithm.ipynb  pyproject.toml
src/: Job_Schedule.py
